--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "react-lab-04",
+    "name": "reactlab04",
     "version": "1.0.0",
     "description": "React project",
     "main": "/src/index.js",
